# callbackmanager

./: CMakeLists.txt  README.md  callbackmanager.cpp
.github/workflows/: test.yml
example/: callback_examples.cpp  callback_function_template_args.cpp  functions.cpp
test/: callbackmanager_test.cpp
